# tart-position-cal

./: .gitignore  CHANGES.md  CITATION.cff  README.md  pyproject.toml
doc/: .gitignore  SYMMETRY.md  pos_cal_slides.tex  position-cal.bib  tart_position_cal.tex
example/: Makefile  antenna_measurements.ods  antenna_positions.json
tart_position_cal/: __init__.py  calibrate.py
tart_position_cal/scripts/: tart_position_cal.py
tests/: test_calibrate.py
